--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ body {
     padding: 30px 20px;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
     text-align: center;
+    float: left;
+    width: 60%;
 }
 
 #next-button {
@@ -68,4 +70,93 @@ body {
     margin: 10px 0;
     font-style: italic;
     color: #555;
+}
+
+#listDef {
+    float: right;
+    width: 35%;
+    max-height: 80vh;
+    overflow-y: auto;
+}
+
+#word-list {
+    list-style: none;
+    padding: 0;
+}
+
+#word-list li {
+    color: #2196f3;
+    cursor: pointer;
+    margin-bottom: 8px;
+}
+
+nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff5f0;
+    padding: 15px 0;
+    border-bottom: 2px solid #4a2e2b;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+
+nav ul {
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    font-family: 'Comic Sans MS', 'Verdana', sans-serif;
+}
+
+nav a {
+    text-decoration: none;
+    color: #4a2e2b;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 8px 12px;
+    border-radius: 10px;
+    transition: background-color 0.3s;
+}
+
+.five-pointed-star {
+ --star-color: orange;
+ margin: 0 0.14em;
+ font-size: 2.1em;
+ position: relative;
+ display: inline-block;
+ width: 0;
+ height: 0;
+ border-right: 0.21em solid transparent;
+ border-bottom: 0.154em solid var(--star-color);
+ border-left: 0.21em solid transparent;
+ transform: rotate(35deg);
+ vertical-align: middle;
+}
+.five-pointed-star:before {
+ border-bottom: 0.168em solid var(--star-color);
+ border-left: 0.063em solid transparent;
+ border-right: 0.063em solid transparent;
+ position: absolute;
+ height: 0;
+ width: 0;
+ top: -0.098em;
+ left: -0.136em;
+ display: block;
+ content: "";
+ transform: rotate(-35deg);
+}
+.five-pointed-star:after {
+ position: absolute;
+ display: block;
+ top: 0.006em;
+ left: -0.224em;
+ width: 0;
+ height: 0;
+ border-right: 0.21em solid transparent;
+ border-bottom: 0.154em solid var(--star-color);
+ border-left: 0.21em solid transparent;
+ transform: rotate(-70deg);
+ content: "";
 }
